--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-REACT_APP_API_URL=https://reddybackend.vercel.app/
+REACT_APP_API_URL=https://ackssgog880g0c0s00wwcgo8.umkk.life
 REACT_APP_WS_URL=wss://zplay1.in/socket.io/?EIO=4&transport=websocket
 REACT_APP_STATIC_URL=https://zplay1.in
 REACT_APP_ROUTER_FUTURE_FLAGS=v7_startTransition,v7_relativeSplatPath
